<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_mapping"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/nav_mapping" />

        <item
            android:id="@+id/nav_recruitments"
            android:icon="@drawable/ic_view_list_black"
            android:title="@string/nav_photos" />

    </group>

    <item android:title="Miscellaneous">
        <menu>
            <item
                android:id="@+id/nav_app_setting"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/nav_app_setting" />

            <item
                android:id="@+id/nav_offline_data"
                android:title="Cached Data"
                android:icon="@drawable/ic_folder_black"
                />

            <item
                android:id="@+id/nav_http_server"
                android:title="Peer Share"
                android:icon="@drawable/ic_compare_arrows_black"
                />

            <item
                android:id="@+id/nav_about_us"
                android:title="About"
                android:icon="@drawable/ic_info_black"/>

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>
