<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_export_scoring_tool"
        android:orderInCategory="100"
        android:title="@string/download"
        android:icon="@drawable/ic_file_download_black_24dp"
        android:tint="@color/colorAccent"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_passed"
        android:orderInCategory="100"
        android:title="@string/passed"
        android:icon="@drawable/ic_file_download_black_24dp"
        android:tint="@color/colorAccent"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_failed"
        android:orderInCategory="100"
        android:title="@string/failed"
        android:icon="@drawable/ic_file_download_black_24dp"
        android:tint="@color/colorAccent"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_all"
        android:orderInCategory="100"
        android:title="@string/all"
        android:icon="@drawable/ic_file_download_black_24dp"
        android:tint="@color/colorAccent"
        app:showAsAction="collapseActionView" />
</menu>
